--- a/TvGram/views/home.ejs
+++ b/TvGram/views/home.ejs
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TvShow</title>
-	<link rel="stylesheet" href="static/styles.css">
+	<link rel="stylesheet" href="/static/styles.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -42,7 +42,11 @@
 
 	</main>
 
-
+	<footer class="bg-dark text-light p-2 w-100">
+		<p class="lead text-center">Thank you <a href="https://www.tvmaze.com/" target="_blank">TvMaze</a> and your
+			public <a href="https://www.tvmaze.com/api" target="_blank">API</a>
+		</p>
+	</footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
