--- a/TvGram/public/static/styles.css
+++ b/TvGram/public/static/styles.css
@@ -9,10 +9,10 @@ body {
   min-height: 100vh;
   position: relative;
 }
-.footer {
-  position: absolute;
+/* #footer {
+  position: relative;
   bottom: 0;
-}
+} */
 
 @media only screen and (max-width: 768px) {
   .info {
