--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>TvShow</title>
+	<title>IMDB Clone Project 🍿</title>
 	<link rel="stylesheet" href="/static/styles.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -14,7 +14,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark font-monospace">
 		<div class="container-fluid">
-			<a class="navbar-brand h1 mb-0" href="#">TvGram🍿</a>
+			<a class="navbar-brand h1 mb-0" href="#">IMDB Clone Project🍿</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
 				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
